# dump-opencl-info

./: .gitmodules  CMakeLists.txt  README.md  build.py  builder.py
include/: Device.h  DeviceInfo.h  Devices.h  InfoShow.h  InfoShowConsole.h  InfoShowJson.h  OCLLibLoader.h  Platform.h  PlatformInfo.h  Platforms.h  define.h  log.h
src/: Device.cpp  DeviceInfo.cpp  Devices.cpp  DumpOpenCLInfo.cpp  InfoShow.cpp  InfoShowConsole.cpp  InfoShowJson.cpp  OCLLibLoader.cpp  Platform.cpp  PlatformInfo.cpp  Platforms.cpp
